--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
+
   "scripts": {
     "start": "parcel index.html",
+    "build":"parcel build index.html", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
