--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
-
   "scripts": {
     "start": "parcel index.html",
-    "build":"parcel build index.html", 
+    "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,8 +17,10 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0"
   }
 }
